# football-data-manager-and-simulator

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  football data manager and simulator.sln  football data manager and simulator.vcxproj  football data manager and simulator.vcxproj.filters  football data manager.sln  team_data.json
data/: aa.db
football data manager/: football data manager.vcxproj  football data manager.vcxproj.filters  main.cpp  match_manager.h  player_data.cpp  player_data.h  player_data.json  team_data.cpp  team_data.h  team_data.json  version.h
football-data-manager-and-match-simulation/: CMakeLists.txt
football-data-manager-and-match-simulation/include/: data_manager.h  func.h  player_data.h  team_data.h  version.h
football-data-manager-and-match-simulation/source/: data_manager.cpp  func.cpp  main.cpp  player_data.cpp  team_data.cpp
include/headers/: Team.h  func.h  match_manager.h  match_setup.h  player_data.h  team_data.h  version.h
src/: data_manager.cpp  entry point.cpp  func.cpp  func.h  main.cpp  match.cpp  match_manager.cpp  match_manager.h  match_setup.cpp  match_setup.h  match_simulation.cpp  match_simulation.h  player_data.cpp  team_data.cpp  version.h
